[project]
name = "opaiui-demo"
version = "0.1.0"
description = "Demo for opaiui"
authors = [
    {name = "Shawn T O'Neil",email = "oneilsh@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-ai >=0.4.5,<0.5.0",
    "arxiv >=2.2.0,<3.0.0",
    "streamlit >=1.47.0,<2.0.0",
    "python-dotenv >=1.1.1,<2.0.0",
    "opaiui >=0.8.0,<0.9.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
