[tool.poetry]
name = "opaiui-demo"
version = "0.1.0"
description = "Demo for opaiui"
authors = ["Shawn T O'Neil <oneilsh@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic-ai = ">=0.4.5,<0.5.0"
arxiv = ">=2.2.0,<3.0.0"
streamlit = ">=1.47.0,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
opaiui = ">=0.11.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"